# ewe4mav

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
config/: external_wrench_estimation.yaml  imu_mocap_fusion.yaml  plot.xml
data/: roped_flight_gt.bag
include/external_wrench_estimation/core/: devectorize_N.h  devectorize_U.h  devectorize_W.h  devectorize_X.h  devectorize_Y.h  devectorize_error_X.h  devectorize_params.h  error_state_extended_kalman_filter.h  external_wrench_estimation.hpp  vectorize_N.h  vectorize_U.h  vectorize_W.h  vectorize_X.h  vectorize_Y.h  vectorize_error_X.h  vectorize_params.h
include/external_wrench_estimation/types/: N_t.hpp  U_t.hpp  W_t.hpp  X_t.hpp  Y_t.hpp  error_X_t.hpp  params_N_sigma_t.hpp  params_W_sigma_t.hpp  params_t.hpp
include/imu_mocap_fusion/core/: devectorize_N.h  devectorize_U.h  devectorize_W.h  devectorize_X.h  devectorize_Y.h  devectorize_error_X.h  devectorize_params.h  error_state_extended_kalman_filter.h  imu_mocap_fusion.hpp  vectorize_N.h  vectorize_U.h  vectorize_W.h  vectorize_X.h  vectorize_Y.h  vectorize_error_X.h  vectorize_params.h
include/imu_mocap_fusion/types/: N_t.hpp  U_t.hpp  W_t.hpp  X_t.hpp  Y_t.hpp  error_X_t.hpp  params_N_sigma_t.hpp  params_W_sigma_t.hpp  params_t.hpp
launch/: main.launch  roped_flight.launch
msg/: ImfOut.msg
src/external_wrench_estimation/: node.cpp
src/imu_mocap_fusion/: node.cpp
